--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "bcrypt": "^1.0.2",
     "material-ui": "^0.18.6",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-responsive-carousel": "^3.1.24",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-tap-event-plugin": "^2.0.1",
