--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "material-ui": "^0.18.6",
+    "material-ui-search-bar": "^0.2.4",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
