--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "formsy-material-ui": "^0.6.2",
+    "formsy-react": "^0.19.5",
     "material-ui": "^0.18.6",
     "material-ui-search-bar": "^0.2.4",
     "meteor-node-stubs": "~0.2.4",
@@ -22,8 +24,10 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-orm": "^0.9.4",
     "redux-orm-proptypes": "^0.1.0",
+    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
-    "selectn": "^1.1.2"
+    "selectn": "^1.1.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
