--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-orm-proptypes": "^0.1.0",
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "selectn": "^1.1.2",
     "underscore": "^1.8.3"
   },
