--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^1.0.2",
     "formsy-material-ui": "^0.6.2",
     "formsy-react": "^0.19.5",
+    "localforage": "^1.5.0",
     "material-ui": "^0.18.6",
     "material-ui-search-bar": "^0.2.4",
     "meteor-node-stubs": "~0.2.4",
@@ -24,7 +25,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-orm": "^0.9.4",
     "redux-orm-proptypes": "^0.1.0",
-    "redux-persist": "^4.8.2",
+    "redux-persist": "^4.8.3",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "selectn": "^1.1.2",
