--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-glide": "^2.0.0",
     "react-redux": "^5.0.5",
-    "react-responsive-carousel": "^3.1.24",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-tap-event-plugin": "^2.0.1",
