--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor --settings settings.json"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "formsy-material-ui": "^0.6.2",
@@ -14,8 +15,12 @@
     "material-ui-search-bar": "^0.2.4",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
+    "react-addons-update": "^15.6.0",
     "react-bootstrap": "^0.31.1",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.0.0",
     "react-glide": "^2.0.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
