--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor --settings settings.json"
   },
   "dependencies": {
+    "aws-sdk": "^2.95.0",
     "axios": "^0.16.2",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
