--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-ui": "^0.18.6",
     "material-ui-search-bar": "^0.2.4",
     "meteor-node-stubs": "~0.2.4",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-addons-update": "^15.6.0",
     "react-bootstrap": "^0.31.1",
@@ -23,6 +24,7 @@
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.0.0",
     "react-glide": "^2.0.0",
+    "react-moment": "^0.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
