--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.16.2",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "create-react-class": "^15.6.0",
     "formsy-material-ui": "^0.6.2",
     "formsy-react": "^0.19.5",
     "localforage": "^1.5.0",
