--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "selectn": "^1.1.2",
+    "sweetalert2": "^6.6.8",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
