--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "create-react-class": "^15.6.0",
     "formsy-material-ui": "^0.6.2",
     "formsy-react": "^0.19.5",
+    "google-libphonenumber": "^3.0.0",
     "localforage": "^1.5.0",
     "material-ui": "^0.18.6",
     "material-ui-search-bar": "^0.2.4",
