--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "reselect": "^3.0.1",
     "selectn": "^1.1.2",
     "sweetalert2": "^6.6.8",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "uniforms": "^1.20.0",
+    "uniforms-material": "^1.20.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
