search bar autocomplete done.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "create-react-class": "^15.6.0",
+    "es6-promise-debounce": "^1.0.1",
     "formsy-material-ui": "^0.6.2",
     "formsy-react": "^0.19.5",
     "google-libphonenumber": "^3.0.0",
@@ -20,6 +21,7 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-addons-update": "^15.6.0",
+    "react-autocomplete": "^1.5.10",
     "react-bootstrap": "^0.31.1",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
