--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formsy-material-ui": "^0.6.2",
     "formsy-react": "^0.19.5",
     "google-libphonenumber": "^3.0.0",
+    "jquery": "^3.2.1",
     "localforage": "^1.5.0",
     "material-ui": "^0.18.6",
     "material-ui-search-bar": "^0.2.4",
