--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.0.0",
     "react-glide": "^2.0.0",
+    "react-image-lightbox": "^4.1.0",
     "react-komposer": "^2.0.0",
     "react-moment": "^0.6.1",
     "react-redux": "^5.0.5",
